add banner section

--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,73 @@
-#navbarText ul li{
-    display: flex;
- 
- align-items: flex-end;
- 
- background-color: aqua;
+
+body{
+    color: #fff;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Poppins; 
+    font-style: normal;
+    font-weight: 700px;
+    line-height: normal;
+    margin: 0;
+
 }
-.navbar-nav{
-    justify-content: center;
+
+.nav-menu{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px;
+
+
+}
+.nav-item ul li {
+  
+    list-style: none;
+    color: #3E3E3E;
+    font-size: 16px;
+    font-weight: 500px;
+}
+.nav-item ul{
+    display: flex;
+    gap:20px;
+  
+   
+}
+.nav-title{
+    color:#3E3E3E;
+    font-size: 22px;
+
+}
+/* Banner section */
+.carousel-inner h5{
+     color: #fff;
+    align-items: center;
+     font-size: 48px;
+     font-weight: 600px;
+     padding-top: 20px;
+     width: 600PX;
+    
+     margin: auto;
+     
+
+}
+.carousel-inner p{
+     width: 456px;
+     color:#fff;
+     font-size: 16px;
+     font-weight: 300px;
+     margin: auto;
+     height: 48px; 
+     
+}
+.carousel-inner .btn-primary{
+    padding: 10px;
+    border: 0;
+    border-radius: 5px;
+    background-color: #fff;
+    width: 168px;
+    color: #3F87F5;
+    font-size: 16px;
+    font-weight: 700;
+    margin: 20px;
+
+   
 }
