--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,7 @@ body{
 
 }
 
+
 .nav-menu{
     display: flex;
     align-items: center;
@@ -75,7 +76,7 @@ body{
 
 .album-details{
     display: flex;
-    padding-top: 60px;
+    padding: 60px;
     align-items: center;
     gap:50px;
 
@@ -155,3 +156,106 @@ line-height: 24px; /* 171.429% */
      color: #007CFFA1;
     
 }
+/*  Our package section */
+.title{
+    color: #0A0826;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 38px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-transform: capitalize;
+    padding-bottom: 50px;
+
+}
+
+ .price{
+    color: #231D4F;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 46px; /* 127.778% */
+ }  
+ 
+ .package-title{
+    color: #231D4F;
+    font-family: Roboto;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+
+ } 
+ .package-description{
+    width: 206px;
+    color: #848199;
+    font-family: Poppins;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+ }
+
+ .price-menu .btn-primary{
+    border-radius: 24px;
+     opacity: 0.5; 
+    background: #F496D1;
+    width: 207px;
+    height: 45px;
+    color: #3F87F5;
+
+    text-align: center;
+    font-family: Roboto;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;;
+    border: 0;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 700;
+   
+
+    
+    
+ }
+ .price-menu p:before {
+    
+    content: '✓';
+    width: 20px;
+    height: 20px;
+    background-color:#b5b2d1;
+    border-radius: 50%;
+    color: #FFF;
+    
+  }
+.price-menu ul {
+    list-style: none;
+    text-decoration: none;
+    margin-top: 20px;
+    color: #848199;
+    font-size: 15px;
+    font-weight: 400;
+    text-align: left;
+    padding-left: 10px;
+
+}
+.price-menu ul li{
+margin-left: 10px;
+}
+.package-details{
+    display: flex;
+    justify-content: space-between;
+}
+.package-detail{
+ padding: 30px 20px;
+}
+.package-details :hover{
+    background-color: #3F87F5;
+    border-radius: 24px;
+    color:#FFF;
+}
+
+
