--- a/style/style.css
+++ b/style/style.css
@@ -257,5 +257,78 @@ margin-left: 10px;
     border-radius: 24px;
     color:#FFF;
 }
+/* Our clients section */
+.clients-section{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 50px;
+}
+.client-details{
+    width: 360px;
+    height: 323px;
+    border-radius: 5px;
+    background: #fff;
+    box-shadow: 0px 12px 30px 0px rgba(0, 0, 0, 0.13);
+    text-align: center;
+}
+.client-description{
+    color: #6C6C6C;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+    padding: 20px;
+
+}
+.client-details img{
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+  
+
+   
+}
+.clients-name{
+    color: #0C1920;
+    font-family: Poppins;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    text-align: center;
+    padding-top: 20px;
+    
+}
+
+.position{
+    color: #747474;
+    font-family: Poppins;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    text-align: center;
+
+}
+/* question section */
+.question-section{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 50px;
+}
+
+.question-photo img{
+    
+    width: 484px;
+    height: 325px;
+    
+    
+
+}
+.slide{
+    width: 752px;
+    
+
+}
 
 
