--- a/style/style.css
+++ b/style/style.css
@@ -257,6 +257,7 @@ margin-left: 10px;
     border-radius: 24px;
     color:#FFF;
 }
+
 /* Our clients section */
 .clients-section{
     display: flex;
@@ -286,8 +287,6 @@ margin-left: 10px;
     border-radius: 100px;
     background: url(<path-to-image>), lightgray 50% / cover no-repeat;
   
-
-   
 }
 .clients-name{
     color: #0C1920;
@@ -309,25 +308,28 @@ margin-left: 10px;
     text-align: center;
 
 }
+
 /* question section */
 .question-section{
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    padding-bottom: 50px;
+    border-radius: 5px;
+    gap: 100px;
+    align-items: center;
+    padding-bottom: 100px;
 }
+
 
 .question-photo img{
-    
-    width: 484px;
-    height: 325px;
-    
+    width: 546px;
+height: 364px;
+flex-shrink: 0;
     
 
 }
-.slide{
-    width: 752px;
-    
+.question-slide{
+    width: 100%;
+
 
 }
 
